--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,4 @@
 spring.application.name=ecommerce
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.output.ansi.enabled=ALWAYS
+spring.data.mongodb.uri=mongodb+srv://admin:cOxX7zMF4MoL33bH@carrot-cake.aen386c.mongodb.net/?retryWrites=true&w=majority&appName=carrot-cake
+spring.data.mongodb.database=carrot-cake
